--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Flowers</title>
+    <title>Hermosa</title>
 </head>
 <body>
     <div class="greetings">
         <span>H</span>
-        <span>E</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-        <span>!</span>
+        <span>e</span>
+        <span>y</span>
+        <span>y</span>
+        <span>y</span>
+    </div>
+    <div class="greetings">
+        <span>H</span>
+        <span>e</span>
+        <span>r</span>
+        <span>m</span>
+        <span>o</span>
+        <span>s</span>
+        <span>a</span>
+        <span>😍</span>
     </div>
     <div class="description">
-        <span>Flowers for you hermosa</span>
+        <span>A little gesture just for you Yvonne</span>
     </div>
     <div class="button">
         <button>
