--- a/index.html
+++ b/index.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/flowers.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="img/flowers.png" type="image/x-icon" />
     <title>Hermosa</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="greetings">
-        <span>H</span>
-        <span>e</span>
-        <span>y</span>
-        <span>y</span>
-        <span>y</span>
+      <span>B</span>
+      <span>i</span>
+      <span>t</span>
+      <span>e</span>
+      <span>e</span>
     </div>
     <div class="greetings">
-        <span>H</span>
-        <span>e</span>
-        <span>r</span>
-        <span>m</span>
-        <span>o</span>
-        <span>s</span>
-        <span>a</span>
-        <span>😍</span>
+      <span>U</span>
+      <span>w</span>
+      <span>e</span>
+      <span>r</span>
+      <span>a</span>
+      <br />
+      <span>w</span>
+      <span>a</span>
+      <span>n</span>
+      <span>j</span>
+      <span>y</span>
+      <span>e</span>
+      <span>😍</span>
     </div>
     <div class="description">
-        <span>A little gesture just for you Yvonne</span>
+      <span>A little fun gesture just for youuuu orayttt</span>
     </div>
     <div class="button">
-        <button>
-            <a href="flower.html">Click here</a>
-        </button>
-        
+      <a class="maroon-btn" href="flower.html">Click here</a>
     </div>
-</body>
+  </body>
 </html>
